<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_background"
            android:fillViewport="true"
            tools:ignore="SpeakableTextPresentCheck">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_80sdp"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <RelativeLayout
                        android:id="@+id/top1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:gravity="start">

                        <ImageView
                            android:id="@+id/logo"
                            android:layout_margin="@dimen/_5sdp"
                            android:layout_width="@dimen/_100sdp"
                            android:layout_height="@dimen/_100sdp"
                            android:layout_centerHorizontal="true"
                            android:padding="@dimen/_4sdp"
                            android:scaleType="centerInside"
                            android:src="@drawable/logo" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_25sdp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:padding="@dimen/_3sdp"
                            android:text="@string/login"
                            android:textColor="@color/texts"
                            android:textColorHint="@color/color_edit_hint"
                            android:textSize="@dimen/_14sdp"
                            android:textStyle="bold" />



                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_25sdp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:layout_margin="@dimen/_2sdp"
                            android:padding="@dimen/_3sdp"
                            android:text="@string/username"
                            android:textColor="@color/texts"
                            android:textColorHint="@color/color_edit_hint"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/edt_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edit_background"
                            android:hint="@string/email_id"
                            android:inputType="textEmailAddress"
                            android:padding="@dimen/_8sdp"
                            android:textColor="@color/color_edit_hint"
                            android:textColorHint="@color/color_edit_hint"
                            android:textSize="@dimen/_12sdp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_25sdp"

                        android:orientation="vertical"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:layout_margin="@dimen/_2sdp"
                            android:padding="@dimen/_3sdp"
                            android:text="@string/password"
                            android:textColor="@color/texts"
                            android:textColorHint="@color/color_edit_hint"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold" />
                        <EditText
                            android:id="@+id/edt_pass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edit_background"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:padding="@dimen/_8sdp"
                            android:textColor="@color/color_edit_hint"
                            android:textColorHint="@color/color_edit_hint"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>


                    <Button
                        android:id="@+id/btn_submit"
                        android:backgroundTint="@color/color_primary"
                        app:cornerRadius="@dimen/_7sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_25sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:elevation="@dimen/_3sdp"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/top"
                    android:layout_marginStart="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_25sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:padding="@dimen/_3sdp"
                        android:text="or"
                        android:layout_margin="@dimen/_5sdp"
                        android:textAlignment="center"
                        android:textColor="@color/texts"
                        android:textColorHint="@color/color_edit_hint"
                        android:textSize="@dimen/_11sdp"
                        android:textStyle="normal" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:padding="@dimen/_3sdp"
                            android:text="@string/don_t_have_a_account"
                            android:textColor="@color/texts"
                            android:textColorHint="@color/color_edit_hint"
                            android:textSize="@dimen/_11sdp"
                            android:textStyle="normal" />

                        <TextView
                            android:id="@+id/sign_up_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:padding="@dimen/_3sdp"
                            android:text="@string/sign_up"
                            android:textColor="@color/red"
                            android:textAllCaps="true"
                            android:textColorHint="@color/color_edit_hint"
                            android:textSize="@dimen/_13sdp"
                            android:textStyle="bold" />

                    </LinearLayout>
                        <View
                            android:layout_marginStart="@dimen/_45sdp"
                            android:layout_marginEnd="@dimen/_45sdp"
                            android:layout_marginTop="-5dp"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_1sdp"
                            android:background="@color/gray"
                            />
                    </LinearLayout>

                </LinearLayout>


            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>
</layout>
